--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'W95FA';
+    src: url(/Fonts/W95FA/W95FA.otf);
+}
 html{
     font-size: 62.5%;
+    font-family: 'W95FA', monospace, 'Times New Roman', Times, serif;
 }
