--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,8 +1,96 @@
 @font-face {
-    font-family: 'W95FA';
-    src: url(/Fonts/W95FA/W95FA.otf);
+  font-family: "W95FA";
+  src: url(/Fonts/W95FA/W95FA.otf);
 }
-html{
-    font-size: 62.5%;
-    font-family: 'W95FA', monospace, 'Times New Roman', Times, serif;
+
+:root {
+  --studio-50: #faf6fe;
+  --studio-100: #f4eafd;
+  --studio-200: #ebdafa;
+  --studio-300: #dcbcf6;
+  --studio-400: #c691ef;
+  --studio-500: #b066e6;
+  --studio-600: #9b47d6;
+  --studio-700: #8635bd;
+  --studio-800: #703099;
+  --studio-900: #5c287b;
+  --studio-950: #3e115a;
+  --black: rgb(30, 30, 30);
+}
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-size: 16px;
+  font-family: "W95FA", monospace, "Times New Roman", Times, serif;
+  background-color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  color: var(--studio-800);
+  margin: 3rem;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50rem;
+  background: var(--studio-400);
+  background: linear-gradient(
+    135deg,
+    var(--studio-300) 35%,
+    var(--studio-900) 100%
+  );
+  margin: 5rem;
+  padding-bottom: 3rem;
+}
+
+li{
+    list-style: upper-roman;
+}
+
+button {
+  background-color: var(--studio-200);
+  color: var(--studio-950);
+  font-family: "W95FA";
+  font-size: medium;
+  border-radius: 5%;
+  border: none;
+  width: 12rem;
+  height: 5rem;
+  cursor: pointer;
+}
+
+.boton-eliminar{
+    width: 3rem;
+    height: 2rem;
+}
+
+.LatBtn{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 100%;
+    padding-right: 15px;
+}
+
+.input-tarea{
+    border: var(--studio-300);
+    color: var(--studio-300);
+    background-color: var(--black);
+    width: 10rem;
+    height: 2rem ;
 }
